# email_service

./: .env.example  .gitignore  .vercelignore  DEBUG_VERCEL.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX.md  VERCEL_QUICKSTART.md  app.py  config.py  deploy-github.bat  deploy-vercel.bat  deploy-vercel.sh  docker-compose.yml  email_service.py  email_template.html  exceptions.py  logger.py  main.py  middleware.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-vercel.txt  requirements.txt  test_app.py  vercel.json
.claude/: settings.local.json
api/: index.py  serverless_app.py
