[project]
name = "send-mail"
version = "1.0.0"
description = "Production-ready FastAPI email service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dateparser",
    "email-validator>=2.0.0",
    "fastapi>=0.109.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pytz",
    "requests",
    "secure-smtplib",
    "tenacity>=8.2.3",
    "uvicorn[standard]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
